Fix navbar visibility issue

--- a/static/public_html/assets/css/creative-studio.css
+++ b/static/public_html/assets/css/creative-studio.css
@@ -10969,6 +10969,7 @@ pre .code {
   width: 95%;
   max-width: 1050px;
   border: 1px solid rgba(234, 240, 252, 0.15);
+  background-color: #fff;
   border-radius: 0.2rem;
   z-index: 9999;
   -webkit-transition: all, 0.33s;
@@ -10982,14 +10983,14 @@ pre .code {
   }
 }
 .custom-navbar .navbar-toggler {
-  border: 1px solid rgba(234, 240, 252, 0.2);
+  border: 1px solid rgba(60, 60, 60, 0.5);
   height: 55px;
 }
 .custom-navbar .navbar-toggler span {
   width: 35px;
   height: 3px;
   display: block;
-  background-color: rgba(234, 240, 252, 0.2);
+  background-color: rgba(60, 60, 60, 0.5);
   border-radius: 10px;
 }
 .custom-navbar .navbar-toggler span:after, .custom-navbar .navbar-toggler span:before {
@@ -10998,7 +10999,7 @@ pre .code {
   display: block;
   height: 3px;
   color: #495057;
-  background-color: rgba(234, 240, 252, 0.2);
+  background-color: rgba(60, 60, 60, 0.5);
 }
 .custom-navbar .navbar-toggler span:after {
   -webkit-transform: translateY(-13px);
@@ -11017,7 +11018,7 @@ pre .code {
   margin: 0 5px;
   font-weight: 600;
   font-size: 14px;
-  color: #fff !important;
+  color: #3c3c3c !important;
 }
 .custom-navbar .nav-link.active {
   color: #3c3c3c !important;
@@ -11036,12 +11037,12 @@ pre .code {
   border-bottom: 1px solid #eaf0fc;
 }
 .custom-navbar.affix .navbar-toggler {
-  border-color: rgba(73, 80, 87, 0.2) !important;
+  border-color: #3c3c3c !important;
 }
 .custom-navbar.affix .navbar-toggler span,
 .custom-navbar.affix .navbar-toggler span:before,
 .custom-navbar.affix .navbar-toggler span:after {
-  background: rgba(73, 80, 87, 0.2) !important;
+  background: #3c3c3c !important;
 }
 .custom-navbar.affix .nav-link {
   color: #495057 !important;
